# chat-lib

./: .gitmodules  CMakeLists.txt  LICENSE  PREFIX  README.md  REFERENCES.md  library.cmake  update.sh
2ndparty/: download.sh
cmake/: Cereal.cmake  RocksDB.cmake
demo/: CMakeLists.txt
demo/messenger/: CMakeLists.txt  main.cpp
demo/messenger-gui/: CMakeLists.txt  ContactList.hpp  ContactListBuilder.cpp  ContactListBuilder.hpp  ContactManagerBuilder.cpp  ContactManagerBuilder.hpp  ContactModel.cpp  ContactModel.hpp  ControllerBuilder.cpp  ControllerBuilder.hpp  ConversationModel.cpp  ConversationModel.hpp  MessageStoreBuilder.cpp  MessageStoreBuilder.hpp  Messenger.hpp  MessengerProxyForQml.cpp  MessengerProxyForQml.hpp  QmlApplication.cpp  QmlApplication.hpp  Units.cpp  Units.hpp  main.cpp
demo/messenger-gui/Resources/: Common.qrc  Desktop.qrc  Mobile.qrc
demo/messenger-gui/Resources/Common/Qml/: Init.qml  Units.qml
demo/messenger-gui/Resources/Desktop/Qml/: ChatToolBar.qml  ContactPage.qml  ConversationPage.qml  Main.qml  MessageComposer.qml  QmlApplication.qml
demo/messenger-gui/Resources/Desktop/Qml/+Material/: ChatToolBar.qml
demo/qml/: CMakeLists.txt  Units.qml  main.cpp  main.qml  main.qrc
include/pfs/chat/: account.hpp  activity_manager.hpp  basic_channel.hpp  basic_contact_list.hpp  basic_contact_manager.hpp  basic_conversation.hpp  basic_editor.hpp  basic_group.hpp  basic_group_list.hpp  basic_message_store.hpp  chat.hpp  chat_enum.hpp  contact.hpp  contact_list.hpp  contact_manager.hpp  conversation.hpp  conversation_enum.hpp  delivery_manager.hpp  editor.hpp  editor_mode.hpp  emoji_db.hpp  error.hpp  exports.hpp  file.hpp  file_cache.hpp  flags.hpp  group_list.hpp  group_list.hpp.DEPRECATED  in_memory.hpp  in_memory_peer_storage.hpp  json.hpp  member_difference.hpp  message.hpp  message_store.hpp  messenger.hpp  messenger_controller.hpp  mime.hpp  namespace.hpp  peer.hpp  peer_manager.hpp  (+9 more)
include/pfs/chat/backend/: delivery_manager.hpp
include/pfs/chat/backend/delivery_manager/: buffer.hpp  netty_p2p.hpp
include/pfs/chat/backend/in_memory/: contact_list.hpp
include/pfs/chat/backend/serializer/: cereal.hpp
include/pfs/chat/backend/sqlite3/: activity_manager.hpp  contact_list.hpp  contact_manager.hpp  conversation.hpp  db_traits.hpp  editor.hpp  file_cache.hpp  group_list.hpp.DEPRECATED  message_store.hpp
include/pfs/chat/callback_traits/: function.hpp
include/pfs/chat/persistent_storage/: contact_list.hpp  entity_storage.hpp  file_cache.hpp  message_store.hpp
include/pfs/chat/persistent_storage/sqlite3/: contact_list.hpp  contact_manager.hpp  conversation.hpp  database_traits.hpp  editor.hpp  entity_storage.hpp  file_cache.hpp  group_list.hpp  in_memory_cache.hpp  incoming_message_store.hpp  message_store.hpp  outgoing_mesage_store.hpp  transaction.hpp
include/pfs/net/chat/: account.hpp  contact.hpp  exports.hpp  message.hpp  message_id_generator.hpp  message_status.hpp  messenger.hpp  messenger_controller.hpp  mime_type.hpp  optional.hpp  time_point.hpp
include/pfs/net/chat/persistent_storage/: contact_list.hpp
include/pfs/net/chat/persistent_storage/sqlite3/: contact_list.hpp
scripts/: build-linux.sh  build.cxx11.cmd  build.cxx11.sh
src/: cereal_serializer.cpp  chat_enum.cpp  contact.cpp  conversation_enum.cpp  emoji_db.cpp  error.cpp  file.cpp  in_memory_peer_storage.cpp  json_content.cpp  member_difference.cpp  message.cpp  mime.cpp  time_point.cpp  timestamp.cpp
src/backend/: delivery_manager.cpp
src/backend/delivery_manager/: buffer.cpp  netty_p2p.cpp
src/backend/in_memory/: contact_list.cpp
src/backend/json/: content.cpp
src/backend/serializer/: cereal.cpp
src/backend/sqlite3/: activity_manager.cpp  contact_list.cpp  contact_manager.cpp  contact_type_enum.hpp  content_traits.hpp  conversation.cpp  conversation_enum.hpp  db_traits.cpp  editor.cpp  file_cache.cpp  group_list.cpp  group_list.cpp.DEPRECATED  group_ref.cpp  message_store.cpp  sha256_traits.hpp
src/in_memory/: contact_list.cpp  dispatcher.cpp
src/json/: content.cpp
src/persistent_storage/: contact.cpp  contact_list.cpp  file_cache.cpp  message_store.cpp
src/persistent_storage/sqlite3/: contact_list.cpp  contact_manager.cpp  contact_type_enum.hpp  content_traits.hpp  conversation.cpp  editor.cpp  engine.cpp  engine.hpp  file_cache.cpp  group_list.cpp  incoming_message_store.cpp  message_store.cpp  message_store.hpp  outgoing_message_store.cpp
src/persistent_storage/sqlite3_traits/: .storage_traits.hpp.kate-swp  bool.hpp  common.hpp  contact_type_enum.hpp  string.hpp  time_point.hpp  uuid.hpp
src/sqlite3/: activity_manager.cpp  chat.cpp  chat_impl.hpp  column_affinity.hpp  contact_list.cpp  contact_list_impl.hpp  contact_manager.cpp  contact_manager_impl.hpp  editor.cpp  editor_impl.hpp  file_cache.cpp  group_ref.cpp  message_store.cpp
tests/: CMakeLists.txt  activity_manager.cpp  chat_search.cpp  contact_list.cpp  contact_list_search.cpp  contact_manager.cpp  conversation_search.cpp  file_cache.cpp  message.cpp  message_store.cpp  messenger.cpp  mime.cpp  peer_manager.cpp  serializer.cpp  time_point.cpp
