################################################################################
# Copyright (c) 2021 Vladislav Trifochkin
#
# This file is part of `chat-lib`.
#
# Changelog:
#      2021.11.17 Initial version.
################################################################################
# add_subdirectory(messenger)
# add_subdirectory(messenger-gui)
# add_subdirectory(qml)
